Remove unused SVG file and update favicon path

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- favicon -->
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -45,7 +47,7 @@
         </div>
       </div>
       <div class="code-btn">
-        <button id="convertBtn" class="custom-btn btn-15 my-10 fw-bold bg-[#8552F2] text-white px-4 py-2 rounded mx-4  btn btn-dark "><span>convert <img src="./convert-3209.svg" width="20" /></span> </button>
+        <button id="convertBtn" class="custom-btn btn-15 my-10 fw-bold bg-[#8552F2] text-white px-4 py-2 rounded mx-4  btn btn-dark "><span>convert <img src="./assets/" width="20" /></span> </button>
       </div>
       <div class="flex-1 ">
         <h5 class="text-2xl mb-2">ES5 code</h5>
