Update code formatting and footer design

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
       <div class="progress-bar"></div>
     </div>
   </div>
+  <footer>
+    <div class="footer-content">
+      <p>© 2024 <a href="https://github.com/Selman-S" target="_blank">Selman-s</a> | <a href="https://selmansahbudak.com.tr/" target="_blank">
+          selmansahbudak.com.tr
+      </a></p>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.21.2/babel.min.js"></script>
   <script src="https://cdn.staticfile.org/codemirror/5.58.2/codemirror.min.js"></script>
   <script src="https://cdn.staticfile.org/codemirror/5.58.2/mode/javascript/javascript.js"></script>
