--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <meta name="description" content="Convert ES6 JavaScript code to ES5 online with this tool. Make your code compatible with older browsers.">
   <meta name="keywords" content="ES6 to ES5, JavaScript code conversion, compatibility, online tool">
   <title>ES6 to ES5 Code Converter - Online Tool</title>
- 
+  <!-- CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-notify@0.5.5/dist/simple-notify.min.css" />
+
+<!-- JS -->
+<script src="https://cdn.jsdelivr.net/npm/simple-notify@0.5.5/dist/simple-notify.min.js"></script>
   <!-- favicon -->
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -54,7 +58,7 @@
         </div>
       </div>
       <div class="code-btn">
-        <button id="convertBtn" class="custom-btn btn-15 my-10 fw-bold bg-[#8552F2] text-white px-4 py-2 rounded mx-4  btn btn-dark "><span>convert <img src="./assets/convert-3209.svg" width="20" alt="convert icon"/></span> </button>
+        <button id="convertBtn" class="custom-btn btn-15 my-10 fw-bold bg-[#08cd14] text-white px-4 py-2 rounded mx-4  btn btn-dark "><span>convert <img src="./assets/convert-3209.svg" width="20" alt="convert icon"/></span> </button>
       </div>
       <div class="flex-1 ">
         <h5 class="text-2xl mb-2">ES5 code</h5>
