--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <meta name="keywords" content="ES6 to ES5, JavaScript code conversion, compatibility, online tool">
   <title>ES6 to ES5 Code Converter - Online Tool</title>
   <!-- CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-notify@0.5.5/dist/simple-notify.min.css" />
+<link rel="stylesheet" href="simple-notify.min.css" />
 
 <!-- JS -->
-<script src="https://cdn.jsdelivr.net/npm/simple-notify@0.5.5/dist/simple-notify.min.js"></script>
+<script src="simple-notify.min.js"></script>
   <!-- favicon -->
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -37,8 +37,8 @@
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 
 
-  <link rel="stylesheet" href="codemirror.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./codemirror.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 
@@ -82,9 +82,9 @@
       </a></p>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.21.2/babel.min.js"></script>
-  <script src="https://cdn.staticfile.org/codemirror/5.58.2/codemirror.min.js"></script>
-  <script src="https://cdn.staticfile.org/codemirror/5.58.2/mode/javascript/javascript.js"></script>
+  <script src="./babel.min.js"></script>
+  <script src="./codemirror.min.js"></script>
+  <script src="./javascript.js"></script>
 
 
 <script src="./app.js"></script>
