--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </a></p>
     </div>
   </footer>
-  <script src="./babel.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.21.2/babel.min.js"></script>
   <script src="./codemirror.min.js"></script>
   <script src="./javascript.js"></script>
 
