--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <meta name="keywords" content="ES6 to ES5, JavaScript code conversion, compatibility, online tool">
   <title>ES6 to ES5 Code Converter - Online Tool</title>
   <!-- CSS -->
-<link rel="stylesheet" href="simple-notify.min.css" />
+<link rel="stylesheet" href="./css/simple-notify.min.css" />
 
 <!-- JS -->
-<script src="simple-notify.min.js"></script>
+<script src="./js/libs/simple-notify.min.js"></script>
   <!-- favicon -->
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -37,8 +37,8 @@
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 
 
-  <link rel="stylesheet" href="./codemirror.css">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/codemirror.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div class="code-btn">
-        <button id="convertBtn" class="custom-btn btn-15 my-10 fw-bold bg-[#08cd14] text-white px-4 py-2 rounded mx-4  btn btn-dark "><span>convert <img src="./assets/convert-3209.svg" width="20" alt="convert icon"/></span> </button>
+        <button id="convertBtn" class="custom-btn btn-15 my-10 fw-bold bg-[#08cd14] text-white px-4 py-2 rounded mx-4  btn btn-dark "><span>convert <img src="./assets/icons/convert-3209.svg" width="20" alt="convert icon"/></span> </button>
       </div>
       <div class="flex-1 ">
         <h5 class="text-2xl mb-2">ES5 code</h5>
@@ -83,11 +83,11 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.21.2/babel.min.js"></script>
-  <script src="./codemirror.min.js"></script>
-  <script src="./javascript.js"></script>
+  <script src="./js/libs/codemirror.min.js"></script>
+  <script src="./js/main.js"></script>
 
 
-<script src="./app.js"></script>
+<script src="./js/app.js"></script>
 </body>
 
 </html>
