--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="code-btn">
-        <button id="convertBtn" class="custom-btn btn-15 my-10 fw-bold bg-[#08cd14] text-white px-4 py-2 rounded mx-4  btn btn-dark "><span>ES6 to ES5 <img src="./assets/icons/convert-3209.svg" width="20" alt="convert icon"/></span> </button>
+        <button id="convertBtn" class="custom-btn btn-15  fw-bold bg-[#08cd14] text-white px-4 py-2 rounded btn btn-dark "><span>ES6 to ES5 <img src="./assets/icons/convert-3209.svg" width="20" alt="convert icon"/></span> </button>
       </div>
       <div class="flex-1 ">
         <h5 class="text-2xl mb-2">Output</h5>
