--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </div>
       <div class="code-btn">
         <button id="convertBtn" class="custom-btn btn-15  fw-bold bg-[#08cd14] text-white px-4 py-2 rounded btn btn-dark "><span>ES6 to ES5 <img src="./assets/icons/convert-3209.svg" width="20" alt="convert icon"/></span> </button>
+        <button id="minifyBtn" class="custom-btn btn-15 mt-4 fw-bold bg-[#2563eb] text-white px-4 py-2 rounded btn btn-dark "><span>Minify</span> </button>
       </div>
       <div class="flex-1 ">
         <h5 class="text-2xl mb-2">Output</h5>
@@ -85,6 +86,7 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.21.2/babel.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/terser@5.24.0/dist/bundle.min.js"></script>
   <script src="./js/libs/codemirror.min.js"></script>
   <script src="./js/main.js"></script>
 
