feat: integrate Google Tag Manager and update URLs for new domain
- Add Google Tag Manager scripts for enhanced tracking and analytics.
- Update all references from the old domain to the new domain (es6-to-es5.vercel.app) in index.html, robots.txt, and sitemap.xml.
- Ensure all SEO-related meta tags and sitemap entries reflect the new domain for consistency and improved search visibility.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-N72J47LX');</script>
+  <!-- End Google Tag Manager -->
+  
   <!-- Primary SEO Meta Tags -->
   <title>ES6 to ES5 Converter | Free Online JavaScript Transpiler & Minifier</title>
   <meta name="title" content="ES6 to ES5 Converter | Free Online JavaScript Transpiler & Minifier">
@@ -17,28 +25,26 @@
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://es6-to-es5-converter.com/">
+  <meta property="og:url" content="https://es6-to-es5.vercel.app/">
   <meta property="og:title" content="ES6 to ES5 Converter | Free Online JavaScript Transpiler">
   <meta property="og:description" content="Convert ES6/ES2015+ JavaScript code to ES5 instantly. Free online transpiler with minification and browser compatibility features.">
-  <meta property="og:image" content="https://es6-to-es5-converter.com/assets/og-image.jpg">
   <meta property="og:site_name" content="ES6 to ES5 Converter">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://es6-to-es5-converter.com/">
+  <meta property="twitter:url" content="https://es6-to-es5.vercel.app/">
   <meta property="twitter:title" content="ES6 to ES5 Converter | Free Online JavaScript Transpiler">
   <meta property="twitter:description" content="Convert ES6/ES2015+ JavaScript code to ES5 instantly. Free online transpiler with minification and browser compatibility features.">
-  <meta property="twitter:image" content="https://es6-to-es5-converter.com/assets/twitter-image.jpg">
   <meta property="twitter:creator" content="@selman_s">
   
   <!-- Additional SEO Meta Tags -->
   <meta name="theme-color" content="#293CA6">
   <meta name="msapplication-TileColor" content="#293CA6">
   <meta name="application-name" content="ES6 to ES5 Converter">
-  <link rel="canonical" href="https://es6-to-es5-converter.com/">
+  <link rel="canonical" href="https://es6-to-es5.vercel.app/">
   
   <!-- Google Search Console verification (replace with actual verification code) -->
-  <meta name="google-site-verification" content="YOUR_GOOGLE_SEARCH_CONSOLE_VERIFICATION_CODE">
+  <meta name="google-site-verification" content="qI1ffq3BGSsh6z0QGLzrTHpeVdftCl2q5aamzOpLTY0">
   
   <!-- Performance and SEO optimizations -->
   <meta name="format-detection" content="telephone=no">
@@ -124,7 +130,7 @@
     "@type": "WebApplication",
     "name": "ES6 to ES5 Converter",
     "description": "Free online JavaScript transpiler and minifier that converts ES6/ES2015+ code to ES5 for maximum browser compatibility",
-    "url": "https://es6-to-es5-converter.com/",
+    "url": "https://es6-to-es5.vercel.app/",
     "applicationCategory": "DeveloperApplication",
     "operatingSystem": "Any",
     "offers": {
@@ -149,7 +155,6 @@
       "No registration required",
       "Privacy-first approach"
     ],
-    "screenshot": "https://es6-to-es5-converter.com/assets/screenshot.jpg",
     "softwareVersion": "1.0",
     "datePublished": "2024-01-01",
     "dateModified": "2024-12-19"
@@ -163,6 +168,11 @@
 
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N72J47LX"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
   <header>
     <div class="bg-[#293CA6] bg-gradient-to-r from-[#293CA6] to-[#3854A6] text-white text-2xl p-4 text-center">
       <h1 class="text-3xl font-bold mb-2">ES6 to ES5 Converter</h1>
@@ -294,7 +304,7 @@ class User {
   <footer itemscope itemtype="https://schema.org/WebApplication">
     <meta itemprop="name" content="ES6 to ES5 Converter">
     <meta itemprop="description" content="Free online JavaScript transpiler and minifier">
-    <meta itemprop="url" content="https://es6-to-es5-converter.com">
+    <meta itemprop="url" content="https://es6-to-es5.vercel.app">
     <meta itemprop="applicationCategory" content="DeveloperApplication">
     <meta itemprop="operatingSystem" content="Any">
     
