feat: add new blog posts and update notifications
- Update notification message from Turkish to English for clarity.
- Introduce two new featured blog posts: "How to Convert ES6 Code to ES5" and "ES6 Features Not Supported in Older Browsers" with detailed descriptions and links.
- Update sitemap.xml to include new blog post URLs for improved SEO and crawling.
- Revise blog index to reflect the addition of new posts and update category counts accordingly.

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ class User {
   </main>
   <div id="notification" class="hidden">
     <div class="notification-content">
-      <p>Giriş tamamlandı</p>
+      <p>Processing completed</p>
       <div class="progress-bar"></div>
     </div>
   </div>
@@ -365,6 +365,62 @@ class User {
             <div class="text-sm text-gray-600">
               <span class="mr-4">🕒 5 min read</span>
               <a href="/blog/" class="text-blue-600 hover:text-blue-800 font-medium">View All Articles →</a>
+            </div>
+          </div>
+        </article>
+        
+        <!-- Second Featured Post -->
+        <article class="bg-gradient-to-r from-green-50 to-teal-50 rounded-lg p-6 shadow-lg mt-6">
+          <div class="flex items-start justify-between mb-4">
+            <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm font-medium">Step-by-Step Guide</span>
+            <time class="text-gray-500 text-sm">January 16, 2025</time>
+          </div>
+          <h3 class="text-xl font-bold text-gray-800 mb-3">
+            <a href="/blog/how-to-convert-es6-to-es5/" class="hover:text-green-600 transition-colors">
+              How to Convert ES6 Code to ES5 (Complete Guide)
+            </a>
+          </h3>
+          <p class="text-gray-700 mb-4 leading-relaxed">
+            Learn how to convert ES6 JavaScript code to ES5 step by step using our free online tool. Complete guide with examples, best practices, and browser compatibility tips.
+          </p>
+          <div class="flex items-center justify-between">
+            <a href="/blog/how-to-convert-es6-to-es5/" 
+               class="bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-lg font-medium transition-colors inline-flex items-center">
+              Read Step-by-Step Guide
+              <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+              </svg>
+            </a>
+            <div class="text-sm text-gray-600">
+              <span>🕒 7 min read</span>
+            </div>
+          </div>
+        </article>
+        
+        <!-- Third Featured Post -->
+        <article class="bg-gradient-to-r from-red-50 to-pink-50 rounded-lg p-6 shadow-lg mt-6">
+          <div class="flex items-start justify-between mb-4">
+            <span class="bg-red-100 text-red-800 px-3 py-1 rounded-full text-sm font-medium">Compatibility Guide</span>
+            <time class="text-gray-500 text-sm">January 17, 2025</time>
+          </div>
+          <h3 class="text-xl font-bold text-gray-800 mb-3">
+            <a href="/blog/es6-features-not-supported-in-old-browsers/" class="hover:text-red-600 transition-colors">
+              ES6 Features Not Supported in Older Browsers
+            </a>
+          </h3>
+          <p class="text-gray-700 mb-4 leading-relaxed">
+            Discover which ES6 JavaScript features don't work in older browsers like IE11. Learn about arrow functions, let/const, template literals, classes, and how to convert them to ES5.
+          </p>
+          <div class="flex items-center justify-between">
+            <a href="/blog/es6-features-not-supported-in-old-browsers/" 
+               class="bg-red-600 hover:bg-red-700 text-white px-6 py-3 rounded-lg font-medium transition-colors inline-flex items-center">
+              Read Compatibility Guide
+              <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+              </svg>
+            </a>
+            <div class="text-sm text-gray-600">
+              <span>🕒 8 min read</span>
             </div>
           </div>
         </article>
