--- a/index.html
+++ b/index.html
@@ -424,6 +424,34 @@ class User {
             </div>
           </div>
         </article>
+        
+        <!-- Fourth Featured Post - Tool Comparison -->
+        <article class="bg-gradient-to-r from-purple-50 to-indigo-50 rounded-lg p-6 shadow-lg mt-6">
+          <div class="flex items-start justify-between mb-4">
+            <span class="bg-purple-100 text-purple-800 px-3 py-1 rounded-full text-sm font-medium">Tool Comparison</span>
+            <time class="text-gray-500 text-sm">January 18, 2025</time>
+          </div>
+          <h3 class="text-xl font-bold text-gray-800 mb-3">
+            <a href="/blog/top-online-javascript-converters-2025/" class="hover:text-purple-600 transition-colors">
+              Top 5 Online JavaScript Converters in 2025 🥇
+            </a>
+          </h3>
+          <p class="text-gray-700 mb-4 leading-relaxed">
+            Discover the best online JavaScript converters in 2025. Compare tools like Babel, esbuild, and the ES6-to-ES5 Converter for speed, simplicity, and accuracy.
+          </p>
+          <div class="flex items-center justify-between">
+            <a href="/blog/top-online-javascript-converters-2025/" 
+               class="bg-purple-600 hover:bg-purple-700 text-white px-6 py-3 rounded-lg font-medium transition-colors inline-flex items-center">
+              Read Tool Comparison
+              <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+              </svg>
+            </a>
+            <div class="text-sm text-gray-600">
+              <span>🕒 6 min read</span>
+            </div>
+          </div>
+        </article>
       </div>
     </div>
   </section>
