feat: add Google site verification meta tag for improved SEO
- Include a Google site verification meta tag in index.html to enhance search engine visibility and verification processes.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta name="title" content="ES6 to ES5 Converter | Free Online JavaScript Transpiler & Minifier">
   <meta name="description" content="Convert ES6/ES2015+ JavaScript code to ES5 instantly. Free online transpiler with minification, deep minify, and browser compatibility features. Includes tutorials and guides on JavaScript transpilation. No signup required!">
   <meta name="keywords" content="ES6 to ES5, JavaScript transpiler, Babel online, ES2015 converter, JavaScript minifier, code compatibility, browser support, online tool, free converter, JavaScript tutorial, transpilation guide, ES6 vs ES5, babel converter online">
+  <meta name="google-site-verification" content="qI1ffq3BGSsh6z0QGLzrTHpeVdftCl2q5aamzOpLTY0">
   <meta name="author" content="Selman Sahbudak">
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
