--- a/index.html
+++ b/index.html
@@ -117,27 +117,23 @@
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/@babel/standalone@7.21.2/babel.min.js" as="script">
   <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
   <link rel="dns-prefetch" href="//cdn.tailwindcss.com">
-  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Tailwind CSS - Single optimized load -->
+  <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
   <script>
     tailwind.config = {
       theme: {
         extend: {
           colors: {
-            clifford: '#da373d',
+            primary: '#293CA6',
           }
         }
       }
     }
   </script>
-
-  <style type="text/tailwindcss">
-    @layer utilities {
-      .content-auto {
-        content-visibility: auto;
-      }
-    }
-  </style>
-  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+  
+  <!-- Lucide Icons CDN -->
+  <script src="https://unpkg.com/lucide@latest"></script>
 
   <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
@@ -219,13 +215,13 @@
         <h4 class="text-lg mb-2 font-semibold" style="color: #1f2937;">ES6/ES2015+ Input</h4>
         <div class="code-input">
           <div class="stats-badge" id="inputStats">
-            <span>📝</span>
+            <i data-lucide="file-text" class="badge-icon"></i>
             <span id="inputCharCount">0 chars</span>
             <span>|</span>
             <span id="inputLineCount">0 lines</span>
           </div>
           <button class="clear-code-btn tooltip" onclick="clearCodefunc()" aria-label="Clear input code">
-            🗑️ Clear
+            <i data-lucide="trash-2" class="btn-icon"></i> Clear
             <span class="tooltiptext">Clear all code (Ctrl+Shift+X)</span>
           </button>
           <textarea id="text1" 
@@ -247,19 +243,19 @@ class User {
         <button id="convertBtn" class="custom-btn btn-convert tooltip" 
                 aria-label="Convert ES6 code to ES5 compatible JavaScript">
           <div class="spinner"></div>
-          <span>🔄 Convert</span>
+          <span class="btn-content"><i data-lucide="refresh-cw" class="btn-icon"></i> Convert</span>
           <span class="tooltiptext">Convert to ES5 (Ctrl+Enter)</span>
         </button>
         <button id="minifyBtn" class="custom-btn btn-minify tooltip" 
                 aria-label="Convert to ES5 and minify the code">
           <div class="spinner"></div>
-          <span>🗜️ Minify</span>
+          <span class="btn-content"><i data-lucide="archive" class="btn-icon"></i> Minify</span>
           <span class="tooltiptext">Convert & Minify (Ctrl+Shift+M)</span>
         </button>
         <button id="deepMinifyBtn" class="custom-btn btn-deep-minify tooltip" 
                 aria-label="Convert to ES5 and apply deep minification with maximum compression">
           <div class="spinner"></div>
-          <span>⚡ Deep Minify</span>
+          <span class="btn-content"><i data-lucide="zap" class="btn-icon"></i> Deep Minify</span>
           <span class="tooltiptext">Maximum Compression (Ctrl+Shift+D)</span>
         </button>
       </div>
@@ -267,20 +263,20 @@ class User {
         <h4 class="text-lg mb-2 font-semibold" style="color: #1f2937;">ES5 Output</h4>
         <div class="code-output">
           <div class="stats-badge" id="outputStats">
-            <span>📄</span>
+            <i data-lucide="file-code" class="badge-icon"></i>
             <span id="outputCharCount">0 chars</span>
             <span>|</span>
             <span id="outputLineCount">0 lines</span>
           </div>
           <div class="compression-badge" id="compressionBadge" style="display: none;">
-            💾 <span id="compressionRatio">0%</span> smaller
+            <i data-lucide="hard-drive" class="badge-icon"></i> <span id="compressionRatio">0%</span> smaller
           </div>
           <button class="download-code-btn tooltip" onclick="downloadCode()" aria-label="Download converted code">
-            ⬇️ Download
+            <i data-lucide="download" class="btn-icon"></i> Download
             <span class="tooltiptext">Download as .js file</span>
           </button>
           <button class="copy-code-btn tooltip" onclick="copyCodefunc()" aria-label="Copy converted code to clipboard">
-            📋 Copy
+            <i data-lucide="copy" class="btn-icon"></i> Copy
             <span class="tooltiptext">Copy to clipboard (Ctrl+Shift+C)</span>
           </button>
           <textarea id="text2" 
@@ -295,17 +291,17 @@ class User {
     <!-- Features Overview -->
     <section class="features-overview">
       <div class="feature-card-modern feature-card-green">
-        <div class="feature-icon">🔄</div>
+        <div class="feature-icon"><i data-lucide="repeat" style="width: 40px; height: 40px;"></i></div>
         <h3 class="feature-title">Transpile</h3>
         <p class="feature-description">Convert ES6+ to ES5</p>
       </div>
       <div class="feature-card-modern feature-card-blue">
-        <div class="feature-icon">🗜️</div>
+        <div class="feature-icon"><i data-lucide="minimize-2" style="width: 40px; height: 40px;"></i></div>
         <h3 class="feature-title">Minify</h3>
         <p class="feature-description">Reduce file size</p>
       </div>
       <div class="feature-card-modern feature-card-purple">
-        <div class="feature-icon">⚡</div>
+        <div class="feature-icon"><i data-lucide="zap" style="width: 40px; height: 40px;"></i></div>
         <h3 class="feature-title">Deep Clean</h3>
         <p class="feature-description">Ultimate compression</p>
       </div>
@@ -313,22 +309,22 @@ class User {
 
     <!-- Sample Templates - Below Converter -->
     <div class="sample-templates-below">
-      <h3 class="sample-templates-title">📝 Quick Start Examples</h3>
+      <h3 class="sample-templates-title"><i data-lucide="code-2" class="inline-icon"></i> Quick Start Examples</h3>
       <div class="sample-templates-grid">
         <button class="template-btn" onclick="loadTemplate('arrow')" title="Load arrow function example">
-          ➜ Arrow Function
+          <i data-lucide="arrow-right" class="btn-icon"></i> Arrow Function
         </button>
         <button class="template-btn" onclick="loadTemplate('class')" title="Load class example">
-          🏛️ Class
+          <i data-lucide="layers" class="btn-icon"></i> Class
         </button>
         <button class="template-btn" onclick="loadTemplate('destructuring')" title="Load destructuring example">
-          📦 Destructuring
+          <i data-lucide="package" class="btn-icon"></i> Destructuring
         </button>
         <button class="template-btn" onclick="loadTemplate('async')" title="Load async/await example">
-          ⏱️ Async/Await
+          <i data-lucide="clock" class="btn-icon"></i> Async/Await
         </button>
         <button class="template-btn" onclick="loadTemplate('spread')" title="Load spread operator example">
-          ⚡ Spread
+          <i data-lucide="maximize-2" class="btn-icon"></i> Spread
         </button>
       </div>
     </div>
@@ -345,22 +341,22 @@ class User {
       <h2 class="text-3xl font-bold text-center mb-8" style="color: #1f2937;">Why Use Our ES6 to ES5 Converter?</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
         <div class="text-center">
-          <div class="text-4xl mb-4">🌐</div>
+          <div class="text-4xl mb-4"><i data-lucide="globe" style="width: 48px; height: 48px; margin: 0 auto;"></i></div>
           <h3 class="font-semibold mb-2" style="color: #1f2937;">Browser Compatibility</h3>
           <p class="text-sm" style="color: #4b5563;">Support older browsers like IE11 with ES5 compatible code</p>
         </div>
         <div class="text-center">
-          <div class="text-4xl mb-4">⚡</div>
+          <div class="text-4xl mb-4"><i data-lucide="zap" style="width: 48px; height: 48px; margin: 0 auto;"></i></div>
           <h3 class="font-semibold mb-2" style="color: #1f2937;">Fast & Reliable</h3>
           <p class="text-sm" style="color: #4b5563;">Instant conversion using Babel.js transpiler technology</p>
         </div>
         <div class="text-center">
-          <div class="text-4xl mb-4">🆓</div>
+          <div class="text-4xl mb-4"><i data-lucide="gift" style="width: 48px; height: 48px; margin: 0 auto;"></i></div>
           <h3 class="font-semibold mb-2" style="color: #1f2937;">100% Free</h3>
           <p class="text-sm" style="color: #4b5563;">No registration, no limits, completely free to use</p>
         </div>
         <div class="text-center">
-          <div class="text-4xl mb-4">🔒</div>
+          <div class="text-4xl mb-4"><i data-lucide="shield-check" style="width: 48px; height: 48px; margin: 0 auto;"></i></div>
           <h3 class="font-semibold mb-2" style="color: #1f2937;">Privacy First</h3>
           <p class="text-sm" style="color: #4b5563;">All processing done in your browser, code never leaves your device</p>
         </div>
@@ -411,12 +407,10 @@ class User {
             <a href="/blog/what-is-es6-and-why-convert-to-es5/" 
                class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg font-medium transition-colors inline-flex items-center">
               Read Tutorial
-              <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-              </svg>
+              <i data-lucide="arrow-right" class="ml-2" style="width: 16px; height: 16px;"></i>
             </a>
             <div class="text-sm" style="color: #4b5563;">
-              <span class="mr-4">🕒 5 min read</span>
+              <span class="mr-4 inline-flex items-center gap-1"><i data-lucide="clock" style="width: 14px; height: 14px;"></i> 5 min read</span>
               <a href="/blog/" class="text-blue-600 hover:text-blue-800 font-medium">View All Articles →</a>
             </div>
           </div>
@@ -440,12 +434,10 @@ class User {
             <a href="/blog/how-to-convert-es6-to-es5/" 
                class="bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-lg font-medium transition-colors inline-flex items-center">
               Read Step-by-Step Guide
-              <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-              </svg>
+              <i data-lucide="arrow-right" class="ml-2" style="width: 16px; height: 16px;"></i>
             </a>
             <div class="text-sm" style="color: #4b5563;">
-              <span>🕒 7 min read</span>
+              <span class="inline-flex items-center gap-1"><i data-lucide="clock" style="width: 14px; height: 14px;"></i> 7 min read</span>
             </div>
           </div>
         </article>
@@ -468,12 +460,10 @@ class User {
             <a href="/blog/es6-features-not-supported-in-old-browsers/" 
                class="bg-red-600 hover:bg-red-700 text-white px-6 py-3 rounded-lg font-medium transition-colors inline-flex items-center">
               Read Compatibility Guide
-              <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-              </svg>
+              <i data-lucide="arrow-right" class="ml-2" style="width: 16px; height: 16px;"></i>
             </a>
             <div class="text-sm" style="color: #4b5563;">
-              <span>🕒 8 min read</span>
+              <span class="inline-flex items-center gap-1"><i data-lucide="clock" style="width: 14px; height: 14px;"></i> 8 min read</span>
             </div>
           </div>
         </article>
@@ -486,7 +476,7 @@ class User {
           </div>
           <h3 class="text-xl font-bold mb-3" style="color: #1f2937;">
             <a href="/blog/top-online-javascript-converters-2025/" class="hover:text-purple-600 transition-colors">
-              Top 5 Online JavaScript Converters in 2025 🥇
+              Top 5 Online JavaScript Converters in 2025
             </a>
           </h3>
           <p class="mb-4 leading-relaxed" style="color: #4b5563;">
@@ -496,12 +486,10 @@ class User {
             <a href="/blog/top-online-javascript-converters-2025/" 
                class="bg-purple-600 hover:bg-purple-700 text-white px-6 py-3 rounded-lg font-medium transition-colors inline-flex items-center">
               Read Tool Comparison
-              <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-              </svg>
+              <i data-lucide="arrow-right" class="ml-2" style="width: 16px; height: 16px;"></i>
             </a>
             <div class="text-sm" style="color: #4b5563;">
-              <span>🕒 6 min read</span>
+              <span class="inline-flex items-center gap-1"><i data-lucide="clock" style="width: 14px; height: 14px;"></i> 6 min read</span>
             </div>
           </div>
         </article>
@@ -523,7 +511,7 @@ class User {
           Professional JavaScript developer specializing in modern web technologies and browser compatibility solutions.
         </p>
         <div class="flex justify-center space-x-6 text-sm">
-          <a href="/blog/" class="text-gray-300 hover:text-white">📚 Blog</a>
+          <a href="/blog/" class="text-gray-300 hover:text-white inline-flex items-center gap-1"><i data-lucide="book-open" style="width: 14px; height: 14px;"></i> Blog</a>
           <a href="https://selmansahbudak.com.tr/" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white">Portfolio</a>
           <a href="https://github.com/Selman-S" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white">GitHub</a>
           <a href="mailto:contact@selmansahbudak.com.tr" class="text-gray-300 hover:text-white">Contact</a>
@@ -536,8 +524,8 @@ class User {
   <div id="cookieConsent" class="fixed bottom-0 left-0 right-0 bg-gray-900 text-white p-4 z-50 transform translate-y-full transition-transform duration-300">
     <div class="container mx-auto flex flex-col md:flex-row items-center justify-between">
       <div class="mb-4 md:mb-0">
-        <p class="text-sm">
-          🍪 We use cookies and Google Analytics to improve user experience and analyze website traffic. 
+        <p class="text-sm inline-flex items-center gap-2">
+          <i data-lucide="cookie" style="width: 16px; height: 16px;"></i> We use cookies and Google Analytics to improve user experience and analyze website traffic. 
           <a href="#privacy" class="underline hover:text-blue-300">Privacy Policy</a>
         </p>
       </div>
@@ -559,6 +547,11 @@ class User {
 
 
 <script src="./js/app.js"></script>
+
+<!-- Initialize Lucide Icons -->
+<script>
+  lucide.createIcons();
+</script>
 </body>
 
 </html>
